--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         }
     </style> -->
 
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/media.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media.css">
 </head>
 
 <body>
