upd styles media

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </ul>
                 </div>
             </nav>
-            <h3>Економ-переїзд</h3>
+            <h3 class="title-mob">Економ-переїзд</h3>
             <button type="button" class="open-btn-menu" data-modal-open><svg width="32" height="22" class="icon-open-menu">
                 <use href="./images/InlineSprite.svg#icon-men-burger"></use>
               </svg></button>
@@ -352,8 +352,8 @@
         </section>
         <section id="news" class="news"> NEWS </section>
         <section id="tariff" class="tariff">
-            <h1>Вантажні перевезення Київ - у нас завжди вигідні ціни та актуальні тарифи</h1>
-            <table id="tariffs">
+            <h1 class="title-tariffs">Вантажні перевезення Київ - у нас завжди вигідні ціни та актуальні тарифи</h1>
+            <table id="tariffs" class="tariffs">
                 <tbody>
                     <tr class="orang">
                         <td class="auto">
@@ -361,13 +361,13 @@
                         <td class="podac">
                             Подача</td>
                         <td class="chr">
-                            Година роботи (Київ)</td>
+                            Година роботи</td>
                         <td class="minz">
-                            Мін. замовлення (Київ)</td>
+                            Мін. замовлення</td>
                         <td class="viezd">
                             Виїзд за Київ</td>
                     </tr>
-                    <tr>
+                    <tr class="table-item">
                         <td class="auto">
                             Мікроавтобус міні<br>
                             <img src="./images/mini.png">
@@ -382,12 +382,12 @@
                             11 грн/км<br>
                             кругорейс</td>
                     </tr>
-                    <tr>
+                    <tr class="table-item">
                         <td class="niz" colspan="5">
                             об'єм кузова – до 5,5 м.куб; довжина – 2,4 м; ширина – 1.50 м; висота – 1.50 м; 1
                             пасажирське місце</td>
                     </tr>
-                    <tr>
+                    <tr class="table-item">
                         <td class="auto">
                             Газель подовжена<br>
                             <img src="./images/gazel.png">
@@ -402,12 +402,12 @@
                             15 грн/км<br>
                             кругорейс</td>
                     </tr>
-                    <tr>
+                    <tr class="table-item">
                         <td class="niz" colspan="5">
                             об'єм кузова – 18 м.куб; довжина – 4,10 м; ширина – 2 м; висота – 2,20 м; вантажопідйомність
                             – до 1,5 тн</td>
                     </tr>
-                    <tr>
+                    <tr class="table-item">
                         <td class="auto">
                             Мерседес<br>
                             <img src="./images/mers.png">
@@ -421,11 +421,11 @@
                         <td class="viezd">
                             25 грн/км кругорейс</td>
                     </tr>
-                    <tr>
+                    <tr class="table-item">
                         <td class="niz" colspan="5">
-                            об'єм&nbsp;кузова – 32-42 м.куб; довжина – 5,2 м; ширина – 2,40 м; висота – 2,20 м;
+                            об'єм кузова – 32-42 м.куб; довжина – 5,2 м; ширина – 2,40 м; висота – 2,20 м;
                             вантажопідйомність – до 5 тн, гідроборт, перепустка в центральну частину Києва<br>
-                            &nbsp;</td>
+                            </td>
                     </tr>
                 </tbody>
             </table>
